@@ -58,8 +58,8 @@ module Spec
       end
       
       def format_args(*args)
-        return "(no args)" if args.empty? || args == :no_args || args == [:no_args]
-        return "(any args)" if [:any_args] == args
+        return "(no args)" if args.empty? || args == [:no_args]
+        return "(any args)" if args == [:any_args]
         "(" + arg_list(*args) + ")"
       end
 
